Worked on the notifications
